Se agrego el nombre del chofer
Se agregó el  nombre del chofer al reporte.
Se agregó una imagen de carga y un background worker.

--- a/Rutas Control de Reparto/Properties/Settings.settings
+++ b/Rutas Control de Reparto/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="SQLiteCobranza" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="Sucursal" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Carnicería</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
