--- a/Rutas Control de Reparto/packages.config
+++ b/Rutas Control de Reparto/packages.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.0.0" targetFramework="net40-Client" />
-  <package id="EntityFramework.Firebird" version="4.10.0.0" targetFramework="net40-Client" />
-  <package id="FirebirdSql.Data.FirebirdClient" version="4.5.0.0" targetFramework="net40-Client" />
-  <package id="System.Data.SQLite" version="1.0.99.0" targetFramework="net40-Client" />
+  <package id="FirebirdSql.Data.FirebirdClient" version="4.10.0.0" targetFramework="net40-Client" />
+  <package id="Simple.Data.Ado" version="0.18.3.1" targetFramework="net40-Client" />
+  <package id="Simple.Data.Core" version="0.18.3.1" targetFramework="net40-Client" />
   <package id="System.Data.SQLite.Core" version="1.0.99.0" targetFramework="net40-Client" />
   <package id="System.Data.SQLite.EF6" version="1.0.99.0" targetFramework="net40-Client" />
   <package id="System.Data.SQLite.Linq" version="1.0.99.0" targetFramework="net40-Client" />
+  <package id="System.Data.SQLite.x86" version="1.0.99.0" targetFramework="net40-Client" />
 </packages>
