Se corrigió el bug de documentos que no se mostraban debido a que la base de datos de control de reparto no contiene los nombres de los choferes ni de los encargados. Estos datos solo se guardan en la base de datos "ControlDeCobranza".

--- a/Rutas Control de Reparto/Rutas Control de Reparto.csproj
+++ b/Rutas Control de Reparto/Rutas Control de Reparto.csproj
@@ -128,6 +128,7 @@
     <Compile Include="GUIs\FrmPrincipal.Designer.cs">
       <DependentUpon>FrmPrincipal.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modelos\Personal.cs" />
     <Compile Include="Modelos\Reporte.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
